[package]
name = "jib"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Jib is a library for the Solana blockchain that lets you efficiently pack instructions into transactions and submit them via a TPU client."
repository = "https://github.com/samuelvanderwaal/jib"
readme = "README.md"
keywords = ["solana", "blockchain", "transactions", "instructions", "tpu"]
documentation = "https://docs.rs/jib"
homepage = "https://github.com/samuelvanderwaal/jib"

[dependencies]
bincode = "1.3.3"
indicatif = "0.17.6"
serde = "1.0.185"
solana-client = "=1.16.11"
solana-quic-client = "=1.16.11"
solana-sdk = "=1.16.11"
thiserror = "1.0.40"
tracing = "0.1.37"
