[package]
name = "jib"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Jib is a library for the Solana blockchain that lets you efficiently pack instructions into transactions and submit them via a TPU client."
repository = "https://github.com/samuelvanderwaal/jib"
readme = "README.md"
keywords = ["solana", "blockchain", "transactions", "instructions", "tpu"]
documentation = "https://docs.rs/jib"
homepage = "https://github.com/samuelvanderwaal/jib"

[features]
tpu = ["solana-quic-client"]

[dependencies]
bincode = "1.3.3"
futures-util = "0.3.30"
indicatif = "0.17.6"
ratelimit = "0.9.0"
rayon = "1.8.0"
serde = "1.0.185"
solana-client = "<1.18"
solana-quic-client = { version = "<1.18", optional = true }
solana-sdk = "<1.18"
thiserror = "1.0.40"
tokio = "1.35.1"
tracing = "0.1.37"
