[package]
name = "jib"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Jib is a library for the Solana blockchain that lets you efficiently pack instructions into transactions and submit them via a TPU client."
repository = "https://github.com/samuelvanderwaal/jib"
readme = "README.md"
keywords = ["solana", "blockchain", "transactions", "instructions", "tpu"]
documentation = "https://docs.rs/jib"
homepage = "https://github.com/samuelvanderwaal/jib"

[features]
tpu = ["solana-quic-client"]

[dependencies]
bincode = "1"
futures-util = "0.3"
indicatif = "0.17"
ratelimit = "0.9"
rayon = "1"
serde = "1"
solana-client = "~2.2"
solana-quic-client = { version = "~2.2", optional = true }
solana-sdk = "~2.2"
thiserror = "2"
tokio = "1"
tracing = "0.1"
